--- a/src/NerdDinner/project.json
+++ b/src/NerdDinner/project.json
@@ -4,12 +4,17 @@
     "Bower": "1.3.11",
     "EntityFramework.Commands": "7.0.0-rc1-final",
     "EntityFramework.Core": "7.0.0-rc1-final",
+    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
     "EntityFramework.SqlServer": "7.0.0-beta4",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Identity": "3.0.0-rc1-final",
     "Microsoft.AspNetCore.Authentication": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Authentication.Facebook": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Authentication.Google": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Authentication.MicrosoftAccount": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Authentication.Twitter": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Authorization": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Identity": "1.0.0-rc2-final",
@@ -21,6 +26,8 @@
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.Server.WebListener": "0.1.0-rc2-final",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0-rc2-final",
+    "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
+    "Microsoft.Extensions.Logging.Console": "1.0.0-rc2-final",
     "Microsoft.Framework.CodeGenerators.Mvc": "1.0.0-beta5",
     "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4",
     "Microsoft.Framework.ConfigurationModel.UserSecrets": "1.0.0-beta4",
