--- a/src/NerdDinner/project.lock.json
+++ b/src/NerdDinner/project.lock.json
@@ -10527,6 +10527,7 @@
       "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore >= 1.0.0-rc2-final",
       "Microsoft.AspNetCore.Identity.EntityFrameworkCore >= 1.0.0-rc2-final",
       "Microsoft.AspNetCore.Mvc >= 1.0.0-rc2-final",
+      "Microsoft.AspNetCore.Mvc.ViewFeatures >= 1.0.0-rc2-final",
       "Microsoft.AspNetCore.Razor.Tools >= 1.0.0-preview1-final",
       "Microsoft.AspNetCore.Server.IISIntegration >= 1.0.0-rc2-final",
       "Microsoft.AspNetCore.Server.Kestrel >= 1.0.0-rc2-final",
